# personal-website

./: .gitignore  README.md  astro.config.mjs  games_evaluation.json  package-lock.json  package.json
gamer520/: gamer520_recent_pc_filtered_baseline_2026-05-29_v2.csv  taste.txt
src/: content.config.ts
src/content/: CS同类游戏推荐.md  未命名.md
src/content/game-notes/: Chat with Claude - 关于日式游戏.md  Chat with myself - 关于游戏构造如何利用AI.md  obsidian-reading.css alias  《堆叠大陆》和《炼金之道》到底是什么游戏.md  机制脱离了故事就不再.md
src/content/games/: 逃往南方.md
src/content/notes/: Chat with Claude harness in game.md  未命名.canvas  未命名.md
src/content/posts/摘录/: Paul 保罗 how to work hard 如何努力工作.md  remarkable.md  (+7 more)
src/content/关于工作的一些东西/: Paul - How to Do Great Work 如何做出伟大的工作.md  Paul - What You'll Wish You'd Known 那些你希望自己早些知道的事.md
src/content/关于游戏的一些闲谈/: Chat with myself - 关于游戏构造如何利用AI.md  game-wishlist.md  机制脱离了故事, 就不再活波了.md
src/lib/: remark-highlight-open.mjs
src/pages/excerpts/: [...slug].astro  index.astro
src/styles/: global.css
游戏收集agent/: CLAUDE.md  gamer520-cli-SKILL.md  gamer520-cli-engineering.md  gamer520-daily-update-SKILL.md  gamer520-games.csv  taste.txt
游戏收集agent/evaluations/: batch4_eval.json
游戏收集agent/gamer520_cli/: README.md  pyproject.toml
游戏收集agent/gamer520_cli/src/gamer520_cli/: cli.py  config.py  csv_store.py  models.py  normalize.py  scraper.py  scraper_gamer520.py
游戏收集agent/gamer520_cli/tests/: test_csv_store.py  test_normalize.py  test_operations.py
游戏收集agent/gamer520_cli/tests/fixtures/: games.csv
游戏收集agent/scratch/: filter_candidates.py  note.txt  toplay.md
(+2 files in other folders)
